manifest/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinyl-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: vinyl-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vinyl-app
    spec:
      serviceAccountName: vinyl-app-sa  # ← ServiceAccount 설정 추가
      containers:
      - name: vinyl-app-container
        # image: 398563707131.dkr.ecr.ap-northeast-2.amazonaws.com/vinyl-groove # ECR 버전
        image: h6bro/vinyl-app-repo # docker hub 버전
        ports:
          - protocol: TCP
            containerPort: 8080
