manifest/base/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vinyl-groove-ingress
  #namespace: vinyl-app-namespace # Pod가 배포된 네임스페이스
  annotations:
    # ALB Controller 관련 어노테이션
    alb.ingress.kubernetes.io/scheme: internet-facing  
    alb.ingress.kubernetes.io/target-type: ip         
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:123456789012:certificate/xxxx"  # ACM 인증서 ARN
    external-dns.alpha.kubernetes.io/hostname: www.r53.shop
    alb.ingress.kubernetes.io/healthcheck-path: /health 
    alb.ingress.kubernetes.io/healthcheck-port: '8080'  
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60 

spec:
  ingressClassName: alb 
  rules:
  - host: www.r53.shop  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vinyl-app-service  # 트래픽을 전달할 Service 이름
            port:
              number: 8080        # Service의 포트
